# zoraHoldersAI

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agent/: __init__.py  cache.py  prompt.py  resilience.py  service.py
app/: config.py  main.py
db/: core.py  schema.sql  schema_context.py
db/docker-init/: 001-roles.sh  002-schema.sh  003-grants.sh
eval/: __init__.py  golden_set.jsonl  judge.py  judge_prompt.txt  plot_retrieval.py  report.py  retrieval_golden.jsonl  retrieval_report.py  retrieval_scoring.py  run.py  run_retrieval.py  scoring.py
eval/results/: latest.md  retrieval-latest.md
indexer/: __init__.py  cli.py  client.py  scheduler.py  service.py
legacy/: README.md
llm/: __init__.py  anthropic_client.py  claude_code_client.py  client.py  openai_client.py  pricing.py  types.py
mcp_server/: __init__.py  __main__.py  server.py  tools.py
observability/: __init__.py  query_log.py  tracing.py
retrieval/: __init__.py  chunking.py  embeddings.py  index.py  models.py  service.py
retrieval/corpus/: methodology.md  onchain_glossary.md  protocol_overview.md  system_architecture.md
sql_guard/: __init__.py  executor.py  guard.py
tests/: conftest.py  test_config.py
tests/agent/: test_cache.py  test_prompt.py  test_resilience.py  test_service.py
tests/app/: test_api.py
tests/eval/: test_judge.py  test_report.py  test_retrieval_report.py  test_retrieval_scoring.py  test_run.py  test_scoring.py
tests/indexer/: test_client.py  test_indexer_service.py
tests/llm/: test_adapters.py  test_claude_code_client.py
tests/mcp_server/: test_protocol.py  test_tools.py
ui/: streamlit_app.py
(+3 files in other folders)
